# mprpc

./: CMakeLists.txt  README.md
example/: friend.pb.h  user.pb.cc  user.pb.h  user.proto
example/callee/: friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  rpcprovider.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: mprpccontroller.h  rpcheader.pb.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
